<?xml version="1.0"?>
<package>
  <name>dji_ronin</name>
  <version>0.0.0</version>
  <description>DJI Ronin Remote</description>

  <maintainer email="Itamare@gmail.com">Itamar Eliakim</maintainer>
  <license>BSD</license>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>python-numpy</run_depend>
  <export>
  </export>
</package>
